Fixed invisible images to fully cover half of the screen, regardless of window dimensions

--- a/layout.css
+++ b/layout.css
@@ -60,8 +60,8 @@ img {
     position: relative;
     z-index: 2;
     opacity: 0;
-    height: 100%;
-    width: auto;
+    height: 100vh;
+    width: 50vw;
     margin: 0;
     padding: 0;
 }
